@@ -2,7 +2,6 @@
 <script type="text/javascript" src="js/jquery/jquery.min.js"></script>
 <script type="text/javascript" src="js/jquery/jquery.autocomplete.js"></script>
 <script type="text/javascript" src="js/jquery/jquery.ajaxQueue.js"></script>
-<link type="text/css" rel="stylesheet" href="js/jquery/jquery.autocomplete.css" />
 <script type="text/javascript">
 jQuery.noConflict(); // @see http://docs.jquery.com/Using_jQuery_with_Other_Libraries/
 jQuery(document).ready(function($){
